# usz-neuro-conversion

./: .gitignore  LICENSE  convert_eeg_and_ieeg.ipynb  environment.yml  extracellular.ipynb  extracellular.py  list_subjects.ipynb  main.py  pyproject.toml  read.ipynb  read.py  readme.md  readme.md1  requirements.txt  validate.sh
in/: session_metadata.csv  session_metadata.xlsx
in/metadata/: electrode_locations_mr_ct.xlsx  participant_mapping.xlsx  participants.csv  participants.xlsx  visual_task_electrodes.csv
notebooks/: convert_Human_MTL_units_visual_WM.ipynb  convert_human_amygdala_mua_seeg_fear_video.ipynb  convert_human_mtl_units_scalp_eeg_and_ieeg_verbal_wm.ipynb  export_spike_intervals.ipynb  extracellular.ipynb  list_subjects.ipynb  plot.ipynb  read.ipynb  read_matlab.ipynb  read_nix.ipynb  read_nwb.ipynb  read_visual_wm_participants.ipynb
src/: convert_human_amygdala_mua_seeg_fear_video.ipynb  convert_human_mtl_units_scalp_eeg_and_ieeg_verbal_wm.ipynb
usz_neuro_conversion/: common.py
