[tool.poetry]
name = "usz-neuro-conversion"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "usz_neuro_conversion"}]

[tool.poetry.dependencies]
python = "^3.11"
neuroconv = {extras = ["hdf5"], version = "^0.2.4"}
python-dateutil = "^2.8.2"
pynwb = "^2.2.0"
nixio = "^1.5.3"
matplotlib = "^3.7.0"
jupyter = "^1.0.0"
plotly = "^5.13.1"
pandas = "^1.5.3"
regex = "^2022.10.31"
nwbwidgets = "^0.10.2"
import-ipynb = "^0.1.4"
nbimporter = "^0.3.4"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.1.0"}
nwbinspector = "^0.4.26"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
